Fix drop-shadows using neg offset and z-index

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,6 @@ a {
 .rundown,
 .account {
     background-color:#f9fafc;
-    box-shadow: inset 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
     flex-grow: 1;
 }
 
@@ -98,12 +97,15 @@ a {
 }
 
 
-.register {
+.register {                                             
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: space-between;  
     flex-grow: .1;
+    box-shadow: 0 -8px 10px -6px #000000,
+                0 8px 10px -6px #000000;
+    z-index: 1;
 }
 
 .register form{
@@ -153,7 +155,7 @@ input.success {
 }
 
 .account button {
-    background-color: turquoise;
+    background-color:turquoise;
     color: white;
     display: block;
     width: 25%;
